# ninas-beats

./: FOR_NINA.txt  README.md  install.sh  pyproject.toml  requirements.txt
assets/: lyrics.json
src/: __init__.py  audio_manager.py  colors.py  director.py  lyric_sync.py  main.py  particle.py  renderer.py  visualizer.py
src/scenes/: __init__.py  base.py  finale.py  fireworks.py  heartbeat.py  intro.py  matrix.py  starfield.py  waveform.py
tests/: __init__.py
