[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ninas-beats"
version = "1.0.0"
description = "A terminal-based audio-visual love experience for Nina"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
ninas-beats = "ninas_beats.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
